# libffi-rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  build.rs  install-libffi.sh  install_libffi.sh  release.toml
.github/workflows/: main.yml  test.yml
examples/: example.rs  sort.rs  types.rs
libffi-rs/: CHANGELOG.md  Cargo.toml  README.md
libffi-rs/examples/: sort.rs  types.rs
libffi-rs/src/: lib.rs  low.rs
libffi-rs/src/high/: call.rs  mod.rs  types.rs
libffi-rs/src/middle/: builder.rs  mod.rs  types.rs  util.rs
libffi-sys-rs/: CHANGELOG.md  Cargo.toml  README.md
libffi-sys-rs/include/: include_ffi.h
libffi-sys-rs/include/msvc/: ffi.h
libffi-sys-rs/include/msvc/aarch64/: ffi.h  fficonfig.h
libffi-sys-rs/include/msvc/x86/: ffi.h  fficonfig.h
libffi-sys-rs/include/msvc/x86_64/: ffi.h  fficonfig.h
libffi-sys-rs/libffi/: ChangeLog  Makefile.am  Makefile.in  README.md  config.sub  configure  ltmain.sh
libffi-sys-rs/libffi/doc/: Makefile.in  libffi.info
libffi-sys-rs/libffi/include/: Makefile.in
libffi-sys-rs/libffi/m4/: libtool.m4
libffi-sys-rs/libffi/man/: Makefile.in
libffi-sys-rs/libffi/testsuite/: Makefile.in
libffi-sys-rs/src/: arch.rs  lib.rs
m4/: Cargo.toml
m4/src/: lib.rs
process/: Cargo.toml  README.md
process/src/: lib.rs
scripts/: README.md  qemutests.sh
src/: ffi_type.rs  lib.rs  low.rs  main.rs  middle.rs  raw.rs  types.rs
src/bindgen/: mod.rs
src/c/: include_ffi.h  test  test.c  test.cpp
src/ffi/: bindgen.rs  mod.rs
src/high/: call.rs  mod.rs  new.rs  types.rs
src/middle/: builder.rs  builders.rs  mod.rs  types.rs  types_internal.rs  util.rs
src/types/: mod.rs  typed.rs
