[package]
name = "libffi"
version = "0.6.4"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Rust bindings for libffi"
repository = "https://github.com/tov/libffi-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["ffi", "libffi", "closure", "c"]
categories = ["development-tools::ffi"]

[badges]
travis-ci = { repository = "tov/libffi-rs" }

[features]
unique = []
complex = []

[dependencies]
libffi-sys = "0.6.0"
abort_on_panic = "1.0.0"
libc = "0.2.11"
