[package]
name = "libffi"
version = "4.0.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Rust bindings for libffi"
repository = "https://github.com/tov/libffi-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["ffi", "libffi", "closure", "c"]
categories = ["development-tools::ffi"]
edition = "2018"
rust-version = "1.78"

[dependencies]
libffi-sys = { path = "../libffi-sys-rs", version = "^3.2" }
libc = "0.2.65"

[features]
complex = []
system = ["libffi-sys/system"]

[package.metadata.docs.rs]
features = ["system"]
