[package]
name = "libffi"
version = "4.0.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Rust bindings for libffi"
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories = ["development-tools::ffi"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
libffi-sys = { path = "../libffi-sys-rs", version = "^3.2", default-features = false }
libc = "0.2.65"

[features]
complex = []
default = ["std"]
std = ["libffi-sys/std"]
system = ["libffi-sys/system"]

[package.metadata.docs.rs]
features = ["std", "system"]

[lints]
workspace = true
