[package]
name = "libffi"
version = "4.1.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Rust bindings for libffi"
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories = ["development-tools::ffi"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
libffi-sys = { path = "../libffi-sys-rs", version = "^3.3" }
libc = "0.2.65"

[features]
complex = []
system = ["libffi-sys/system"]

[package.metadata.docs.rs]
features = ["system"]

[lints]
workspace = true
