[package]
name = "libffi-sys"
version = "2.2.1"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
links = "ffi"
build = "build/build.rs"
description = "Raw Rust bindings for libffi"
repository = "https://github.com/tov/libffi-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["ffi", "libffi", "closure", "c"]
edition = "2018"

[features]
system = []
complex = []

[package.metadata.docs.rs]
features = ["system"]

[build-dependencies]
cc = "1.0"
