[package]
name = "libffi-sys"
version = "3.3.1"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
links = "ffi"
build = "build/build.rs"
description = "Raw Rust bindings for libffi"
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
system = []
complex = []

[package.metadata.docs.rs]
features = ["system"]

[build-dependencies]
cc = "1.0"

[lints]
workspace = true
